<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnBookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore_books"
        android:padding="12dp"
        android:layout_marginVertical="8dp"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:padding="12dp"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="24dp"/>

</LinearLayout> 